[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mavlink_helper/protocols", "mavlink_helper/runners", "missions/mission1"]

[project]
name = "7_inch_MAVLink_Mission"
version = "0.1.0"
description = "MAVLink mission for a 7-inch quad."
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "pymavlink"
]